src/objects/SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>Contact__r.FirstName+&quot; &quot;+Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExamScore__c</fullName>
        <label>Exam Score</label>
        <summaryFilterItems>
            <field>Answers__c.CorrectAnswer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Answers__c.SurveyResponse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SurveyName__c</fullName>
        <description>name of the survey. Used for email template</description>
        <formula>Survey__r.Name</formula>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <label>Survey Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filled Out</fullName>
                </value>
                <value>
                    <fullName>Not Filled Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Filled Out</fullName>
                </value>
                <value>
                    <fullName>Not Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Survey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>ContactName__c</columns>
        <columns>ExamScore__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>